@@ -10,6 +10,8 @@
 * Fix for adding and editing organisms and genome builds from Add Analysis window.  Dropdowns now refresh properly.
 * Changed the validation scheme for the work authorization window.(tcourdy)
 * Fixed bug that was causing the organism selected on the Hyb Setup View to change if user went back and changed the organism on the Sample Setup View.(tcourdy)
+* Fixed bug where newly created folders could not be filled with files in experiment upload window. (mbowler)
+* Fixed bug with moving sub folders in experiment upload window. (mbowler)
 
 5.4.1.1 (Apr 15, 2012)
 ----------------------
